fix: How to use flex starter properties like justify- and align-

--- a/2-trillo/sass/_components.scss
+++ b/2-trillo/sass/_components.scss
@@ -1,1 +1,127 @@
-/* Here goes the components */
+/* LOGO */
+.logo {
+  height: 3.25rem;
+  margin-left: 2rem;
+}
+
+/* SEARCG */
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__input {
+    /* Input's font does not inherit from parent elements, therefore we must actively inherit */
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border: none;
+    padding: 0.7rem 20rem;
+    border-radius: 100px;
+    width: 90%;
+    transition: all 0.2s;
+    margin-right: -3.25rem;
+
+    &:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--color-grey-light-3);
+    }
+
+    &::-webkit-input-placeholder {
+      font-weight: 100;
+      color: var(--color-grey-dark-1);
+    }
+  }
+
+  &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
+
+    &:focus {
+      outline: none;
+    }
+
+    &:active {
+      transform: transformy(2px);
+    }
+  }
+
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
+  }
+
+  &__icon {
+    height: 2rem;
+    width: 2rem;
+    fill: var(--color-grey-dark-3);
+  }
+}
+
+/* USER NAVIGATION */
+.user-nav {
+  display: flex;
+  align-items: center;
+  /* On top of adjust container's elements properties, you can apply the same on the container itself with the [-self] subfix */
+  align-self: stretch;
+
+  /* Only select all its direct children */
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+
+    &:hover {
+      background-color: var(--color-grey-light-2);
+    }
+  }
+
+  &__icon-box {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  &__icon {
+    height: 2.25rem;
+    width: 2.25rem;
+    fill: var(--color-grey-dark-2);
+  }
+
+  &__notification {
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    position: absolute;
+    top: 1.75rem;
+    left: 3.5rem;
+    /*
+      You can use the flex display on top of an absolute positioning
+      In this case it has been used to adjust notification's text on center
+    */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__user-photo {
+    height: 3.75rem;
+    border-radius: 50%;
+  }
+
+  /*
+    &__user-name {
+
+    }
+  */
+}
